--- a/Doctor/YpExplain.xaml
+++ b/Doctor/YpExplain.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Doctor"
         mc:Ignorable="d"
-        WindowStyle="None" AllowDrop="True" Loaded="Window_Loaded"  ResizeMode="NoResize" MouseLeftButtonDown="Window_MouseLeftButtonDown"   BorderThickness="2" BorderBrush="#3484F5"  Height="760" Width="900">
+        WindowStyle="None" AllowDrop="True" Loaded="Window_Loaded"  ResizeMode="NoResize" BorderThickness="2" BorderBrush="#3484F5"  Height="760" Width="900">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="30" />
@@ -13,7 +13,7 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0" Orientation="Horizontal" Background="#3484F5" >
-            <Label x:Name="titleLabel" FontWeight="Bold" Foreground="White"  Margin="16,0,0,0" HorizontalContentAlignment="Left"    FontSize="15" VerticalAlignment="Center" VerticalContentAlignment="Center" Height="30"   Width="417">药品说明</Label>
+            <Label x:Name="titleLabel" FontWeight="Bold" Foreground="White"  Margin="16,0,0,0" HorizontalContentAlignment="Left"    FontSize="15" VerticalAlignment="Center" VerticalContentAlignment="Center" Height="30"   Width="417" MouseLeftButtonDown="Window_MouseLeftButtonDown" >药品说明</Label>
 
             <Button  Click="Button_Click"  Template="{StaticResource CloseBtn}" Margin="440,0,0,0" />
         </StackPanel>
@@ -36,18 +36,18 @@
 
                 </StackPanel>
                 <StackPanel Grid.Row="1" Orientation="Vertical">
-                    <Label Height="30" x:Name="BieMing" Width="900" FontSize="14" Padding="20,0,0,0"  HorizontalAlignment="Left"  VerticalContentAlignment="Center" VerticalAlignment="Center"></Label>
-                    <Label Height="30" x:Name="JiXing" Width="900" FontSize="14" Padding="20,0,0,0"  HorizontalAlignment="Left"  VerticalContentAlignment="Center" VerticalAlignment="Center"></Label>
-                    <Label Height="30" x:Name="GuiGe" Width="900" FontSize="14" Padding="20,0,0,0"  HorizontalAlignment="Left"  VerticalContentAlignment="Center" VerticalAlignment="Center"></Label>
-                    <Label Height="30" x:Name="XingZhuang" Width="900" FontSize="14" Padding="20,0,0,0"  HorizontalAlignment="Left"  VerticalContentAlignment="Center" VerticalAlignment="Center"></Label>
+                    <Label Height="30" x:Name="BieMing" Width="820" FontSize="14" Padding="20,0,0,0"  HorizontalAlignment="Left"  VerticalContentAlignment="Center" VerticalAlignment="Center"></Label>
+                    <Label Height="30" x:Name="JiXing" Width="820" FontSize="14" Padding="20,0,0,0"  HorizontalAlignment="Left"  VerticalContentAlignment="Center" VerticalAlignment="Center"></Label>
+                    <Label Height="30" x:Name="GuiGe" Width="820" FontSize="14" Padding="20,0,0,0"  HorizontalAlignment="Left"  VerticalContentAlignment="Center" VerticalAlignment="Center"></Label>
+                    <Label Height="30" x:Name="XingZhuang" Width="820" FontSize="14" Padding="20,0,0,0"  HorizontalAlignment="Left"  VerticalContentAlignment="Center" VerticalAlignment="Center"></Label>
 
                 </StackPanel>
                 <StackPanel Grid.Row="2">
                     <Label Height="35" Width="260" FontSize="14" Padding="20,0,0,0"  HorizontalAlignment="Left" FontWeight="Bold" VerticalContentAlignment="Center" VerticalAlignment="Center">适应症</Label>
 
                 </StackPanel>
-                <StackPanel  Grid.Row="3" Width="900" Height="100" >
-                    <Label MaxWidth="900" FontSize="14" Margin="0,10,0,0" Padding="20,0,0,0">
+                <StackPanel  Grid.Row="3" Width="820" Height="100" >
+                    <Label MaxWidth="820" FontSize="14" Margin="0,10,0,0" Padding="0,0,0,0">
                         <TextBlock x:Name="ShiYing" TextWrapping="Wrap" Text="" />
                     </Label>
                 </StackPanel>
@@ -56,8 +56,8 @@
                     <Label Height="35" Width="260" FontSize="14" Padding="20,0,0,0"  HorizontalAlignment="Left" FontWeight="Bold" VerticalContentAlignment="Center" VerticalAlignment="Center">不良反应</Label>
 
                 </StackPanel>
-                <ScrollViewer  Grid.Row="5" Width="900" Height="100" BorderBrush="Brown" BorderThickness="2" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
-                    <Label MaxWidth="860" FontSize="14" Margin="0,10,0,0" Padding="20,0,0,0">
+                <ScrollViewer  Grid.Row="5" Width="820" Height="100" BorderBrush="Brown" BorderThickness="2" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
+                    <Label MaxWidth="800" FontSize="14" Margin="0,10,0,0" Padding="0,0,0,0">
                         <TextBlock x:Name="BuLiang" TextWrapping="Wrap" Text="" />
                     </Label>
                 </ScrollViewer>
@@ -65,8 +65,8 @@
                     <Label Height="35" Width="260" FontSize="14" Padding="20,0,0,0"  HorizontalAlignment="Left" FontWeight="Bold" VerticalContentAlignment="Center" VerticalAlignment="Center">使用说明</Label>
 
                 </StackPanel>
-                <StackPanel  Grid.Row="7" Width="900" Height="100" >
-                    <Label MaxWidth="860" FontSize="14" Margin="0,10,0,0" Padding="20,0,0,0">
+                <StackPanel  Grid.Row="7" Width="820" Height="100" >
+                    <Label MaxWidth="820" FontSize="14" Margin="0,10,0,0" Padding="0,0,0,0">
                         <TextBlock x:Name="ShuoMing" TextWrapping="Wrap" Text="" />
                     </Label>
                 </StackPanel>
@@ -74,8 +74,8 @@
                     <Label Height="35" Width="260" FontSize="14" Padding="20,0,0,0"  HorizontalAlignment="Left" FontWeight="Bold" VerticalContentAlignment="Center" VerticalAlignment="Center">禁忌症</Label>
 
                 </StackPanel>
-                <StackPanel  Grid.Row="9" Width="900" Height="100"   >
-                    <Label MaxWidth="860" FontSize="14" Margin="0,10,0,0" Padding="20,0,0,0">
+                <StackPanel  Grid.Row="9" Width="820" Height="100"   >
+                    <Label MaxWidth="820" FontSize="14" Margin="0,10,0,0" Padding="0,0,0,0">
                         <TextBlock x:Name="Jinji" TextWrapping="Wrap" Text="" />
                     </Label>
                 </StackPanel>
