--- a/Doctor/YpExplain.xaml
+++ b/Doctor/YpExplain.xaml
@@ -21,13 +21,13 @@
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="35"></RowDefinition>
-                    <RowDefinition Height="120"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="35"></RowDefinition>
-                    <RowDefinition Height="100"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="35"></RowDefinition>
-                    <RowDefinition Height="100"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="35"></RowDefinition>
-                    <RowDefinition Height="100"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="35"></RowDefinition>
                     <RowDefinition Height="*"></RowDefinition>
                 </Grid.RowDefinitions>
@@ -46,7 +46,7 @@
                     <Label Height="35" Width="260" FontSize="14" Padding="20,0,0,0"  HorizontalAlignment="Left" FontWeight="Bold" VerticalContentAlignment="Center" VerticalAlignment="Center">适应症</Label>
 
                 </StackPanel>
-                <StackPanel  Grid.Row="3" Width="820" Height="100" >
+                <StackPanel  Grid.Row="3" Width="820" Height="Auto" >
                     <Label MaxWidth="820" FontSize="14" Margin="0,10,0,0" Padding="0,0,0,0">
                         <TextBlock x:Name="ShiYing" TextWrapping="Wrap" Text="" />
                     </Label>
@@ -56,16 +56,16 @@
                     <Label Height="35" Width="260" FontSize="14" Padding="20,0,0,0"  HorizontalAlignment="Left" FontWeight="Bold" VerticalContentAlignment="Center" VerticalAlignment="Center">不良反应</Label>
 
                 </StackPanel>
-                <ScrollViewer  Grid.Row="5" Width="820" Height="100" BorderBrush="Brown" BorderThickness="2" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
+                <StackPanel  Grid.Row="5" Width="820" Height="Auto">
                     <Label MaxWidth="800" FontSize="14" Margin="0,10,0,0" Padding="0,0,0,0">
                         <TextBlock x:Name="BuLiang" TextWrapping="Wrap" Text="" />
                     </Label>
-                </ScrollViewer>
+                </StackPanel>
                 <StackPanel Grid.Row="6">
                     <Label Height="35" Width="260" FontSize="14" Padding="20,0,0,0"  HorizontalAlignment="Left" FontWeight="Bold" VerticalContentAlignment="Center" VerticalAlignment="Center">使用说明</Label>
 
                 </StackPanel>
-                <StackPanel  Grid.Row="7" Width="820" Height="100" >
+                <StackPanel  Grid.Row="7" Width="820" Height="Auto" >
                     <Label MaxWidth="820" FontSize="14" Margin="0,10,0,0" Padding="0,0,0,0">
                         <TextBlock x:Name="ShuoMing" TextWrapping="Wrap" Text="" />
                     </Label>
@@ -74,7 +74,7 @@
                     <Label Height="35" Width="260" FontSize="14" Padding="20,0,0,0"  HorizontalAlignment="Left" FontWeight="Bold" VerticalContentAlignment="Center" VerticalAlignment="Center">禁忌症</Label>
 
                 </StackPanel>
-                <StackPanel  Grid.Row="9" Width="820" Height="100"   >
+                <StackPanel  Grid.Row="9" Width="820" Height="Auto"   >
                     <Label MaxWidth="820" FontSize="14" Margin="0,10,0,0" Padding="0,0,0,0">
                         <TextBlock x:Name="Jinji" TextWrapping="Wrap" Text="" />
                     </Label>
