--- a/Doctor/Plan.xaml
+++ b/Doctor/Plan.xaml
@@ -71,7 +71,7 @@
                                             
                                             <StackPanel Height="40" Orientation="Horizontal">
                                                 <Label Height="40" Width="90"  FontSize="11"  FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Content="{Binding disease}"/>
-                                                <StackPanel Width="60" Height="25">
+                                                <StackPanel Width="60" Height="25" Orientation="Horizontal">
                                                     <Image Width="20" Visibility="{Binding degreeJi}"    Height="25" Source="/Doctor;component/Resources/急.png"></Image>
                                                     <Image Width="20" Visibility="{Binding degreeWei}"  Height="25" Source="/Doctor;component/Resources/危.png"></Image>
                                                     <Image Width="20" Visibility="{Binding degreeZ}"  Height="25" Source="/Doctor;component/Resources/重.png"></Image>
